--- a/calculator.html
+++ b/calculator.html
@@ -12,10 +12,11 @@
       <td  colspan="3"><input type="text"  id="rahul" style="background-color: black;color: azure;"></td>
       <td colspan="1"><button style="color: aliceblue ;background-color: black;" onclick="clear()">Del</button></td>
     </tr>
+
     <tr>
       <td colspan="1"><input type="button" value="1" id="a" onclick="display('1')"></td>
       <td colspan="1"><input type="button" value="2" id="b" onclick="display('2')"></td>
-      <td colspan="1"><input type="button" value="3" id="c" onclick="display('3')"></td>
+      <td colspan="1"><input zXtype="button" value="3" id="c" onclick="display('3')"></td>
       <td colspan="1"><input type="button" value="+" id="d" onclick="display('+')"></td>
 
     </tr>
